# mcp-servers

./: .gitignore  README.md  conftest.py  index.html  ipcodex-plan.html  ipcodex.html  pytest.ini
.cursor-plugin/: marketplace.json
IPCodex/: CONTEXT.md  comparison.html  ipcodex-plan-backup.html  ipcodex.html
confluence-mcp/: .mcp.json  pyproject.toml  server.py
confluence-mcp/.cursor-plugin/: plugin.json
confluence-mcp/tests/: conftest.py  test_server.py
doc2md-mcp/: .mcp.json  README.md  pyproject.toml  pytest.ini  requirements.txt  server.py
doc2md-mcp/.cursor-plugin/: plugin.json
doc2md-mcp/tests/: conftest.py  test_audit_log.py  test_e2e.py  test_helpers.py  test_http_helpers.py  test_missing.py  test_ocr.py  test_progress.py  test_swagger.py  test_tools.py
jira-mcp/: .mcp.json  pyproject.toml  server.py
jira-mcp/.cursor-plugin/: plugin.json
jira-mcp/tests/: conftest.py  test_server.py
