[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "confluence-mcp"
version = "1.0.0"
description = "MCP server for Confluence Server/Data Center via REST API"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
confluence-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
