[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2md-mcp"
version = "1.0.0"
description = "MCP server for converting PDF, Swagger/OpenAPI, and web pages to Markdown"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pymupdf4llm>=0.3.0",
    "pyyaml>=6.0",
    "easyocr>=1.7.0",
    "crawl4ai>=0.8.0",
]

[project.scripts]
doc2md-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
