[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jira-mcp"
version = "1.0.0"
description = "MCP server for Jira Server/Data Center via REST API v2"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
jira-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["server.py"]
